added support for macos windows, etc and fixed minor issue that prevented the app from loading as it should on macos

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="no.kindermanager.mobileapplications.group11.ntnu.kinder_manager">
+    package="no.ntnu.mobiledevelopement.group11.kindermanager2">
    <application
-        android:label="kinder_manager"
+        android:label="kindermanager2"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
