--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   google_sign_in: ^5.4.1 #4.5.6
   flutter_login_facebook: ^1.6.0 #0.4.0+1
   provider: ^6.0.3 #4.3.2+2
+  firebase_core_platform_interface: 4.5.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -66,9 +67,10 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-     - assets/images/test.png
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+      - assets/images/cartoon.jpeg
+      - assets/images/km.jpeg
+      - assets/images/A-section.webp
+      - assets/images/kindergarten.webp
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
