--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,13 +31,16 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  firebase_core: ^1.21.1 #0.5.1
-  firebase_auth: ^3.7.0 #0.18.2
+  firebase_core: ^1.21.1
+  firebase_auth: ^3.7.0
   cloud_firestore: 3.5.0
-  google_sign_in: ^5.4.1 #4.5.6
-  flutter_login_facebook: ^1.6.0 #0.4.0+1
-  provider: ^6.0.3 #4.3.2+2
+  google_sign_in: ^5.4.1
+  flutter_login_facebook: ^1.6.0
+  provider: ^6.0.3
   firebase_core_platform_interface: 4.5.1
+  image_picker: ^0.8.3
+  firebase_storage: ^10.2.6
+  path: ^1.8.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
