--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+1
+version: 1.0.0
 
 environment:
   sdk: '>=2.18.0 <3.0.0'
@@ -31,20 +31,19 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  firebase_core: ^1.21.1
-  firebase_auth: ^3.7.0
-  cloud_firestore: 3.5.0
-  google_sign_in: ^5.4.1
-  flutter_login_facebook: ^1.6.0
-  provider: ^6.0.3
-  firebase_core_platform_interface: 4.5.1
-  image_picker: ^0.8.3
-  firebase_storage: ^10.2.6
+  firebase_core: ^2.1.1
+  firebase_auth: ^4.1.1
+  cloud_firestore: ^4.0.4
+  google_sign_in: ^5.4.2
+  provider: ^6.0.4
+  firebase_core_platform_interface: ^4.5.2
+  image_picker: ^0.8.6
+  firebase_storage: ^11.0.4
   path: ^1.8.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  cupertino_icons: ^1.0.5
 
 dev_dependencies:
   flutter_test:
@@ -55,7 +54,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  flutter_lints: ^2.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
