--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,23 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
+
+# this is used for changing the application icon as you see it in your phone
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/images/app-icon.png"
+  min_sdk_android: 21 # android min sdk min:16, default 21
+  web:
+    generate: true
+    image_path: "assets/images/app-icon.png"
+    background_color: "#hexcode"
+    theme_color: "#hexcode"
+  windows:
+    generate: true
+    image_path: "assets/images/app-icon.png"
+    icon_size: 48
+
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
