fixed a minor type and aswell fixed that grandle throws exception when using physical android tablet which had to high sdk version than grandle default supported. fixed some warning aswell.

--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -5,10 +5,10 @@
 // 'flutter create' template.
 
 // The application's name. By default this is also the title of the Flutter window.
-PRODUCT_NAME = kindermanager2
+PRODUCT_NAME = kindermanager
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = no.ntnu.mobiledevelopement.group11.kindermanager2
+PRODUCT_BUNDLE_IDENTIFIER = no.ntnu.mobiledevelopement.group11.kindermanager
 
 // The copyright displayed in application information
 PRODUCT_COPYRIGHT = Copyright © 2022 no.ntnu.mobiledevelopement.group11. All rights reserved.
