--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -13,7 +13,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>no.ntnu.mobiledevelopement.group11.kindermanager2</string>
+	<string>no.ntnu.mobiledevelopement.group11.kindermanager</string>
 	<key>PROJECT_ID</key>
 	<string>kinder-manager</string>
 	<key>STORAGE_BUCKET</key>
