--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -91,6 +91,7 @@ flutter:
       - assets/images/km.jpeg
       - assets/images/A-section.webp
       - assets/images/kindergarten.webp
+      - assets/images/app_screenshot.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
