--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   image_picker: ^0.8.6
   firebase_storage: ^11.0.4
   path: ^1.8.2
+  mockito: ^5.3.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
