--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -96,6 +96,7 @@ flutter:
       - assets/images/kindergarten.webp
       - assets/images/app_screenshot.png
       - assets/images/KM_logo.png
+      - assets/images/empty.png
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
