--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -91,14 +91,16 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-      - assets/images/cartoon.jpeg
-      - assets/images/km.jpeg
-      - assets/images/A-section.webp
-      - assets/images/kindergarten.webp
-      - assets/images/app_screenshot.png
-      - assets/images/KM_logo.png
-      - assets/images/empty.png
-      - assets/images/status_info.png
+
+    - assets/images/km.jpeg
+    - assets/images/app_screenshot.png
+    - assets/images/KM_logo.png
+    - assets/images/empty.png
+    - assets/images/status_info.png
+    - assets/images/press.png
+    - assets/images/longpress.png
+    - assets/images/gallery.png
+    - assets/images/signup.png
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
