--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,8 @@ dependencies:
   flutter_launcher_icons: ^0.10.0
 
 dev_dependencies:
+  integration_test:
+    sdk: flutter
   flutter_test:
     sdk: flutter
   mockito: 5.3.2
@@ -100,6 +102,7 @@ flutter:
     - assets/images/press.png
     - assets/images/longpress.png
     - assets/images/gallery.png
+    - assets/text/credentials.csv
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
