--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -102,6 +102,7 @@ flutter:
     - assets/images/press.png
     - assets/images/longpress.png
     - assets/images/gallery.png
+    - assets/images/app-icon.png
     - assets/text/credentials.csv
 
   # An image asset can refer to one or more resolution-specific "variants", see
